<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/large_padding"
    android:layout_marginBottom="@dimen/padding"
    android:orientation="vertical"
    tools:context=".view.faqs.FAQSView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/large_padding"
            android:paddingTop="@dimen/padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingBottom="@dimen/padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginBottom="@dimen/padding"
                android:text="@string/FAQsTextDescription"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/medium_font" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/xl_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQsTextDescription"
                    android:textColor="@color/textGray"
                    android:textSize="@dimen/medium_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/large_padding"
                android:background="@drawable/border_layout"
                android:orientation="vertical"
                android:padding="@dimen/xl_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Que1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xl_padding"
                    android:text="@string/Ans1"
                    android:textColor="@color/textGray"
                    android:textSize="@dimen/medium_font" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/large_padding"
                android:background="@drawable/border_layout"
                android:orientation="vertical"
                android:padding="@dimen/xl_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Que2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xl_padding"
                    android:text="@string/Ans2"
                    android:textColor="@color/textGray"
                    android:textSize="@dimen/medium_font" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/large_padding"
                android:background="@drawable/border_layout"
                android:orientation="vertical"
                android:padding="@dimen/xl_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Que3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xl_padding"
                    android:text="@string/Ans3"
                    android:textColor="@color/textGray"
                    android:textSize="@dimen/medium_font" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>