<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:gravity="center"
            android:text="@string/renameUser"
            android:textColor="@color/appColor"
            android:textSize="@dimen/medium_font" />

        <TextView
            android:id="@+id/renameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:gravity="center"
            android:textColor="@color/appColor"
            android:textSize="@dimen/medium_font" />


        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/xl_padding"
            android:background="@drawable/border_edittext"
            android:padding="@dimen/small_padding"
            android:text="@string/userName"
            android:textColor="@color/textGray"
            android:textSize="@dimen/medium_font" />


        <android.widget.Button
            android:id="@+id/saveRename"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/xl_padding"
            android:layout_marginRight="@dimen/xl_padding"
            android:background="@drawable/button_drawable"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>