<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/deleteUserMessage"
            android:textColor="@color/appColor"
            android:textSize="@dimen/medium_font" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xl_padding"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/deleteUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/xl_padding"
                android:layout_marginRight="@dimen/xl_padding"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:text="@string/deleteUser"
                android:textColor="@color/white" />

            <android.widget.Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/xl_padding"
                android:layout_marginRight="@dimen/xl_padding"
                android:layout_weight="1"
                android:background="@drawable/button_drawable"
                android:text="@string/cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>