<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/xxl_padding"
    android:layout_marginBottom="@dimen/padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin"
        android:textSize="@dimen/small_font"
        android:layout_marginTop="@dimen/xxl_padding"
        android:layout_gravity="start"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:maxLength="6"
        android:gravity="right"
        android:hint="@string/pinHint"
        android:inputType="numberPassword"
        android:nextFocusDown="@id/et_confirm_pin"
        android:textColor="@color/textGray"
        android:background="@drawable/border_grey"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPin"
        android:textSize="@dimen/small_font"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/large_padding"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:hint="@string/confirmPin"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:singleLine="true"
        android:textColor="@color/textGray"
        android:background="@drawable/border_grey"/>

    <TextView
        android:id="@+id/errorPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_font"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginTop="@dimen/xxl_padding"
        android:textColor="@color/red"/>

    <LinearLayout
        android:id="@+id/biometricLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/biometricImg"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/biometric"/>
        <TextView
            android:id="@+id/biometricText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/padding"
            android:textSize="@dimen/small_font"
            android:textColor="@color/textBlack"
            android:textFontWeight="@integer/material_motion_duration_long_2"
            android:text="@string/biometricAuthEnable"
/>
    </LinearLayout>

</LinearLayout>