<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Icon or Image to represent permission -->
        <ImageView
            android:id="@+id/permission_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:contentDescription="Permission Icon"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginLeft="@dimen/padding"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Title for the permission request -->
            <TextView
                android:id="@+id/permission_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requestPermission"
                android:textSize="@dimen/medium_font"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp" />

            <!-- Explanation for the permission request -->
            <TextView
                android:id="@+id/permission_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permissionMessage"
                android:textSize="@dimen/small_font"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="20dp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Request Permission Button -->
        <android.widget.Button
            android:id="@+id/grant_permission_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:layout_marginRight="@dimen/large_padding"
            android:layout_marginLeft="@dimen/large_padding"
            android:textColor="@color/white"
            android:background="@drawable/button_drawable"/>

        <!-- Deny or Cancel Button -->
        <android.widget.Button
            android:id="@+id/cancel_permission_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/large_padding"
            android:layout_marginLeft="@dimen/large_padding"
            android:background="@drawable/button_drawable"/>

    </LinearLayout>


</LinearLayout>